# makelele

./: README.md  pyproject.toml  render.yaml
.github/workflows/: artifacts.yaml  azure_makelele.yml  health.yaml  main_makelele.yml
src/makelele/: main.py
src/makelele/api/routes/: heartbeat.py  home.py  io.py  joke.py  joker.py  router.py
src/makelele/assets/: jokes.toml
src/makelele/core/: config.py  event_handlers.py  messages.py  security.py
src/makelele/models/: home.py  jokes.py
src/makelele/services/: io.py  joke.py  joker.py
tests/: conftest.py
tests/test_api/: test_api_auth.py  test_heartbeat.py  test_joke.py
tests/test_service/: test_models.py
